# TallyBridge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RECOMMENDATIONS.md  SPECS.md  TASKS.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: bi-integration.md  mcp-setup.md  tally-setup.md
recipes/: anomaly_detector.py  daily_digest.py  gst_mismatch_alert.py  overdue_receivables.py
src/tallybridge/: __init__.py  cache.py  cli.py  client.py  config.py  connection.py  einvoice.py  exceptions.py  export.py  parser.py  query.py  reports.py  serve.py  sync.py  version.py
src/tallybridge/cloud/: __init__.py  supabase.py
src/tallybridge/mcp/: __init__.py  sdk_server.py  server.py  tools.py
src/tallybridge/models/: __init__.py  master.py  report.py  voucher.py
tests/: conftest.py  mock_tally.py  test_cache.py  test_cli.py  test_config.py  test_connection.py  test_einvoice.py  test_exceptions.py  test_export.py  test_init.py  test_integration.py  test_mcp.py  test_models.py  test_parser.py  test_query.py  test_reports.py  test_serve.py  test_sync.py  test_version.py
