[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tallybridge"
version = "0.1.0"
description = "Connect TallyPrime to DuckDB and AI via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["tally", "tallyprime", "accounting", "india", "gst", "mcp", "duckdb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "httpx>=0.27.0",
  "duckdb>=1.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",   # BaseSettings lives here in pydantic v2
  "mcp>=1.0.0",                  # Anthropic's official MCP Python SDK
  "loguru>=0.7.2",
  "typer>=0.12.0",
  "python-dotenv>=1.0.0",
  "tenacity>=9.0.0",             # Retry logic for Tally connection
  "rich>=13.0.0",                # Pretty terminal output
  "schedule>=1.2.0",             # Background sync scheduling
]

[project.optional-dependencies]
cloud = [
  "supabase>=2.7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpserver>=1.1.0",   # Mock HTTP server for Tally tests
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
tallybridge = "tallybridge.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB/tallybridge"
Documentation = "https://tallybridge.readthedocs.io"
Repository = "https://github.com/YOUR_GITHUB/tallybridge"
Issues = "https://github.com/YOUR_GITHUB/tallybridge/issues"

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/tallybridge --cov-report=term-missing"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Hatch ────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/tallybridge"]
