[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tallybridge"
version = "0.1.0"
description = "Connect TallyPrime to DuckDB and AI via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "TallyBridge Contributors" },
]
keywords = ["tally", "tallyprime", "accounting", "india", "gst", "mcp", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "duckdb>=1.1.0,<2.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "mcp>=1.2.0,<2.0.0",
    "loguru>=0.7.2,<1.0.0",
    "typer>=0.12.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
    "tenacity>=8.0.0,<10.0.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
cloud = [
    "supabase>=2.7.0,<3.0.0",
]
excel = [
    "openpyxl>=3.1.0,<4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpserver>=1.1.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0,<4.0.0",
]

[project.scripts]
tallybridge = "tallybridge.cli:app"
tallybridge-mcp = "tallybridge.mcp.sdk_server:main"

[project.urls]
Homepage = "https://github.com/nicholasgriffintn/tallybridge"
Documentation = "https://github.com/nicholasgriffintn/tallybridge#readme"
Repository = "https://github.com/nicholasgriffintn/tallybridge"
Issues = "https://github.com/nicholasgriffintn/tallybridge/issues"

# -- Ruff -----------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]

# -- Pytest ---------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/tallybridge --cov-report=term-missing"

# -- Mypy -----------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# -- Hatch ----------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/tallybridge"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
